--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
 
 
     </dependencies>
